2013-12-26  6.8.8-1 Dirk Lemstra <dirk@snakeware...>
  * Added support for reading zip compressed PSD files. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24676).

2013-12-25  6.8.8-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-0, SVN revision 14027.

2013-12-23  6.8.8-0 Cristy  <quetzlzacatenango@image...>
  * Blurring with transparency no longer returns a halo (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24665).
  * Eliminate ICC profile memory leak for JP2 coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24679).

2012-12-21  6.8.8-0 Dirk Lemstra <dirk@snakeware...>
  * Made librsvg the default svg library for the windows distribution.

2013-12-10  6.8.7-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-10, SVN revision 13965.

2013-12-10  6.8.7-10  SiuChi Chan  <...>
  * Fix crash when using -resize with GPU acceleration (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24603).

2013-12-08  6.8.7-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-9, SVN revision 13950.

2013-12-05  6.8.7-9  SiuChi Chan  <...>
  * Silence warning related to GPU memory issues.
  * Check if OpenCL is disabled in checkOpenCLEnvironment() method.
  * Turn off OpenCL path for Intel OpenCL to avoid crash when not enough memory.
  * Fixed a bug for OpenCL convolution.
  * Reduce compiler warnings.

2013-12-03  6.8.7-9 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug in coders/png.c that caused -define png:color-type=0 to
    fail (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24568).

2013-11-30  6.8.7-9 Dirk Lemstra <dirk@snakeware...>
  * Fixed bug in automatic selection of OpenCL device (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24542).
  * Fixed transparency for 32 bits BMP.

2013-11-28  6.8.7-9 Cristy  <quetzlzacatenango@image...>