@@ -1,3 +1,6 @@
+2013-12-27  6.8.8-1 Cristy  <quetzlzacatenango@image...>
+  * Support points argument for draw MSL element.
+
 2013-12-26  6.8.8-1 Dirk Lemstra <dirk@snakeware...>
   * Added support for reading zip compressed PSD files. (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24676).
